# context-free

./: .gitignore  .hgignore  ChangeLog  ContextFreeCLI.sln  ContextFreeCLI.vcproj  ContextFreeCLI.vcxproj  ContextFreeCLI.vcxproj.filters  ContextFreeCLI.vcxprojVS11.filters  ContextFreeCLIVS11.sln  ContextFreeCLIVS11.vcxproj  Dockerfile  Makefile  Makefile.mac  ProjectHome.md  README  README.ffmpeg  README.txt  UpgradeLog.htm  Wasm.Dockerfile  cfdg.1  makeexamples.py  makeexamples.sh  rungallery.sh  runtests-mpeg.sh  runtests.sh  test.ps1
Context Free.xcodeproj/: project.pbxproj
build-contextfree-Desktop-Debug/: Makefile
debian/: README.source  changelog  control  copyright  docs  install  manpages  rules  watch
input/: aliastest.cfdg  alphabet.cfdg  chanukah.cfdg  cilia.cfdg  ciliasun.cfdg  ciliasun_v2.cfdg  demo1.cfdg  demo2.cfdg  funky_flower.cfdg  i_curves.cfdg  i_curves_v2.cfdg  i_pix.cfdg  i_polygons.cfdg  lesson.cfdg  lesson2.cfdg  lesson2_v2.cfdg  lesson_v2.cfdg  line_ending_tests.tgz  mtree.cfdg  octopi.cfdg  octopi_v2.cfdg  point.cfdg  quadcity.cfdg  rendering-tests.cfdg  rose.cfdg  rose_v2.cfdg  sierpinski.cfdg  snowflake.cfdg  tangle.cfdg  thingy.cfdg  thorns.cfdg  tree_number_5.cfdg  triples.cfdg  triples_v2.cfdg  underground.cfdg  weighting_demo.cfdg  welcome.cfdg  xmas.cfdg  ziggy.cfdg
src-common/: CFscintilla.cpp  CFscintilla.h  CmdInfo.cpp  CmdInfo.h  HSBColor.cpp  HSBColor.h  Rand64.cpp  Rand64.h  SVGCanvas.cpp  SVGCanvas.h  abstractPngCanvas.cpp  abstractPngCanvas.h  aggCanvas.cpp  aggCanvas.h  ast.cpp  ast.h  astexpression.cpp  astexpression.h  astreplacement.cpp  astreplacement.h  attributes.h  backwards.h  bounds.cpp  bounds.h  builder.cpp  builder.h  cfdg.cpp  cfdg.h  cfdg.l  cfdg.ypp  cfdgimpl.cpp  cfdgimpl.h  chunk_vector.h  commandLineSystem.cpp  commandLineSystem.h  config.h  countable.cpp  countable.h  examples.h  ffCanvas.cpp  (+37 more)
src-ffmpeg/: README.ffmpeg  ffmpegshim.c  make_ffmpeg_linux  make_ffmpeg_win32  make_ffmpeg_win64
src-js/: main.js
src-mfc/: MFCContextFree.sln
src-net/: AboutBox.cpp  AboutBox.h  AboutBox.resx  AnimateDialog.cpp  AnimateDialog.h  AssemblyInfo.cpp  CFApp.h  CFPrefs.h  CFresources.resx  ColorCalculator.cpp  ColorCalculator.h  ColorCalculator.resx  ContextFreeNet.cpp  ContextFreeNet.sln  ContextFreeNet.vcproj  ContextFreeNet.vcxproj  ContextFreeNet.vcxproj.filters  ContextFreeNet.vcxprojVS11.filters  ContextFreeNetVS11.sln  ContextFreeNetVS11.vcxproj  Document.cpp  Document.h  Document.resx  FindReplaceForm.cpp  FindReplaceForm.h  FindReplaceForm.resx  Form1.cpp  Form1.h  Form1.resx  GalleryUploader.cpp  GalleryUploader.h  GalleryUploader.resx  MRUManager.cpp  MRUManager.h  MessageCtrl.cpp  MessageCtrl.h  MessageCtrl.resx  PreferenceDialog.h  PreferenceDialog.resx  PreferenceManager.cpp  (+23 more)
src-osx/: AVcanvas.h  AVcanvas.mm  BitmapImageHolder.h  BitmapImageHolder.mm  CFDGController.h  CFDGController.mm  CFDGDocument.h  CFDGDocument.mm  ColorCalc.h  ColorCalc.mm  Credits.html  DMSplitView.h  DMSplitView.mm  GView.h  GView.mm  GalleryDownloader.h  GalleryDownloader.mm  GalleryUploader.h  GalleryUploader.mm  GrammarTextView.h  GrammarTextView.mm  HelpMenu.plist  HtmlColorFormatter.h  HtmlColorFormatter.mm  ImageCanvas.h  ImageCanvas.mm  Info.plist  KFSplitView.h  KFSplitView.m  Prefix.pch  RemotePause_norm.tif.icns  RemotePause_press.tif.icns  RemotePlay_norm.tif.icns  RemotePlay_press.tif.icns  TopBar.h  TopBar.mm  UserDefaults.plist  app.icns  (+12 more)
src-qt/: .qmake.stash  CMakeLists.txt  CMakeLists.txt.user.fa4131f  Makefile  SettingsDialog.ui  asyncrenderer.cpp  asyncrenderer.h  cf-util.h  cfdg_highlighter.cpp  cfdg_highlighter.h  cm.old  cmake_install.cmake  context-free.cbp  context-free_automoc.cpp  contextfree  contextfree.pro  exformats.cpp  exformats.h  footest.cfdg  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  moc_predefs.h  qtcanvas.cpp  qtcanvas.h  qtsystem.cpp  qtsystem.h  settings_dialog.cpp  settings_dialog.h  settings_dialog.ui  square.cfdg  ui_mainwindow.h
(+484 files in other folders)
